some cleanup and added tests